[project]
name = "zcode-nvidia-nim-fix"
version = "0.1.1"
description = "Local OpenAI-compatible proxy that sanitizes NVIDIA NIM chat completion requests for ZCode."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "zcode-nvidia-nim-fix" }]
license = { text = "MIT" }

[project.scripts]
zcode-nim-proxy = "nvidia_nim_proxy.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
files = ["nvidia_nim_proxy", "tests"]
